[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.5.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
scikit-learn = "^1.1.2"
notebook = "^6.4.12"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
chatgptpy = "^1.0.8"
xgboost = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
